--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@iconify/react": "^4.1.1",
+    "css-loader": "^6.8.1",
+    "postcss-loader": "^7.3.3",
+    "source-map-loader": "^4.0.1"
   }
 }
